<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Fruits</string>

    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <string name="action_delete_all_entries">Delete All Fruit</string>

    <string name="editor_activity_title_new_product">Add a Fruit</string>

    <string name="action_save">Save</string>

    <string name="action_delete">Delete</string>
    <string name="editor_update_product_failed">Update failed</string>
    <string name="editor_update_product_successful">Update successful</string>
    <string name="fruit_sale">Sale</string>
    <string name="editor_order_phone">Call to Order</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Label for gender information in the editor [CHAR LIMIT=30] -->
    <string name="category_quantity">Quantity</string>
    <string name="editor_increment_quantity">+</string>

    <!-- Decrement quantity button text in editor [CHAR LIMIT=10] -->
    <string name="editor_decrement_quantity">-</string>
    <string name="category_price">Price</string>
    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_supplier">Supplier Name</string>
    <string name="category_phone">Supplier Phone</string>
    <string name="hint_quantity">Quantity</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_name">Name</string>

    <!-- Text hint for breed field in the editor [CHAR LIMIT=30] -->
    <string name="hint_price">Price</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_name">Supplier Name</string>

    <string name="hint_supplier_phone">Supplier Phone</string>

    <string name="editor_insert_product_successful">Product saved</string>

    <string name="editor_insert_product_failed">Error with saving product</string>

    <string name="empty_view_title_text">It\'s a bit hungry here...</string>

    <string name="empty_view_subtitle_text">Get started by adding a fruit</string>
    <string name="editor_activity_edit_product">Edit Fruit</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_product_successful">Fruit deleted</string>

    <string name="editor_delete_product_failed">Error with deleting fruit</string>

    <string name="delete_dialog_msg">Delete this fruit?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>

</resources>
