<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
--><!-- Layout for the editor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_overview" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_price" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_price"
                android:inputType="number" />
        </LinearLayout>
    </LinearLayout>


    <!-- Gender category -->
    <LinearLayout
        android:id="@+id/container_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:layout_width="27dp"
            android:text="@string/category_quantity" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="30dp">

            <EditText
                android:id="@+id/edit_quantity"
                style="@style/EditorFieldStyle"
                android:layout_width="90dp"
                android:layout_height="48dp"
                android:inputType="number"
                android:paddingRight="16dp" />
        </LinearLayout>

        <!-- Input field -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/decrement_quantity_button"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/editor_decrement_quantity" />

            <Button
                android:id="@+id/increment_quantity_button"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/editor_increment_quantity" />


        </LinearLayout>
    </LinearLayout>

    <!-- Measurement category -->
    <LinearLayout
        android:id="@+id/container_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_supplier" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Weight field -->
            <EditText
                android:id="@+id/edit_product_supplier"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_supplier_name"
                android:inputType="text" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_phone" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Weight field -->
            <EditText
                android:id="@+id/edit_phone"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_supplier_phone"
                android:inputType="text" />


        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/order_product_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editor_order_phone" />
</LinearLayout>